# preprocessing_geometry

./: .gitignore  CMakeLists.txt  README.md
inc/: ga.hpp  linearsegment.hpp  polygon.hpp  simplepoint.hpp  simplifier.hpp
src/: aligner_main.cpp  arkin_main.cpp  ga.cpp  ga_eval.cpp  ga_main.cpp  grasp.cpp  linearsegment.cpp  multi_simplifier.cpp  polygon.cpp  simplifier.cpp  simplifier_main.cpp  terminal.cpp  vcp_main.cpp
src/libicp/: icpPointToPlane.cpp  icpPointToPoint.cpp  kdtree.cpp  matrix.cpp
